--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
-
-  
   },
   "keywords": [],
   "author": "",
@@ -18,5 +16,10 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "typescript": "^4.9.4"
   }
 }
